add homepage cards

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,7 @@
 import Head from 'next/head'
 import '../styles/index.scss'
 
-export default ({ children }) => <div class='container'>{children}</div>
+export default ({ children }) => <div className='container'>{children}</div>
 
 <Head>
   <title>Hyperlist Online</title>
@@ -18,10 +18,6 @@ export default ({ children }) => <div class='container'>{children}</div>
 
 Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke. Beard jean shorts small batch messenger bag live-edge fingerstache aesthetic unicorn.
 
-Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke. Beard jean shorts small batch messenger bag live-edge fingerstache aesthetic unicorn.
-
-Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke. Beard jean shorts small batch messenger bag live-edge fingerstache aesthetic unicorn.
-
 - **[Here's a link to a neat thing](qedhqehd) →**    
   Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
 - **[Here's a link to a neat thing](qedhqehd) →**    
@@ -29,32 +25,44 @@ Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin cof
 - **[Here's a link to a neat thing](qedhqehd) →**    
   Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
 
-<div class='box my80 green'>
+<br />
 
-# Test
+<div class='two-up'>
 
-</div>
+<div class='box green'>
 
-<div class='box my80 pink'>
+#### high quality internet content!
 
-# Test
-
-</div>
-
-<div class='box my80 yellow'>
-
-# Test
+Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
 
 </div>
 
-<div class='box my80 purple'>
+<div class='box pink'>
 
-# Test
+#### electronically delivered!
+
+Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
 
 </div>
 
-<div class='box my80 teal'>
+</div>
 
-# Test
+<div class='two-up'>
+
+<div class='box yellow'>
+
+#### 100% pure hypertext!
+
+Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
+
+</div>
+
+<div class='box purple'>
+
+#### browse the archives!
+
+Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
+
+</div>
 
 </div>
