add signup form

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,6 @@
 import Head from 'next/head'
 import '../styles/index.scss'
+import SignupForm from '../components/SignupForm'
 
 export default ({ children }) => <div className='container'>{children}</div>
 
@@ -25,11 +26,11 @@ Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin cof
 - **[Here's a link to a neat thing](qedhqehd) →**    
   Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
 
-<br />
+<SignupForm />
 
-<div class='two-up'>
+<div className='two-up'>
 
-<div class='box green'>
+<div className='box green'>
 
 #### high quality internet content!
 
@@ -37,7 +38,7 @@ Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin cof
 
 </div>
 
-<div class='box pink'>
+<div className='box pink'>
 
 #### electronically delivered!
 
@@ -47,9 +48,9 @@ Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin cof
 
 </div>
 
-<div class='two-up'>
+<div className='two-up'>
 
-<div class='box yellow'>
+<div className='box yellow'>
 
 #### 100% pure hypertext!
 
@@ -57,7 +58,7 @@ Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin cof
 
 </div>
 
-<div class='box purple'>
+<div className='box purple'>
 
 #### browse the archives!
 
