home page stuff

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,20 +11,20 @@ export default ({ children }) => <div className='container'>{children}</div>
 
 <header>
   <img src='/static/logo.svg' width='251' height='71' alt='Hyperlist Online' />
-  <h1>Season 1, Issue 4</h1>
-  <hr />
 </header>
 
-### Excellent content
+### An infotainment newsletter for the independent web ☞ <span>Sign up today!</span>
 
-Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke. Beard jean shorts small batch messenger bag live-edge fingerstache aesthetic unicorn.
+The web used to be a magical place full of creators, and it still can be! Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke.
+
+<!-- Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke. Beard jean shorts small batch messenger bag live-edge fingerstache aesthetic unicorn.
 
 - **[Here's a link to a neat thing](qedhqehd) →**    
   Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
 - **[Here's a link to a neat thing](qedhqehd) →**    
   Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
 - **[Here's a link to a neat thing](qedhqehd) →**    
-  Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
+  Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. -->
 
 <SignupForm />
 
