--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,7 +15,7 @@ export default ({ children }) => <div className='container'>{children}</div>
 
 ### An infotainment newsletter for the independent web ☞ <span>Sign up today!</span>
 
-The web used to be a magical place full of creators, and it still can be! Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke.
+Discovering amazing things that other people have created online used to be easy, but then the web got a lot bigger. Hyperlist is an electronic mail newsletter that narrows down the internet so that you can explore the independent, internet frontier!
 
 <!-- Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke. Beard jean shorts small batch messenger bag live-edge fingerstache aesthetic unicorn.
 
@@ -30,19 +30,19 @@ The web used to be a magical place full of creators, and it still can be! Lorem 
 
 <div className='two-up'>
 
-<div className='box green'>
+<div className='box teal'>
 
 #### high quality internet content!
 
-Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
+we surf the web to find the most interesting things being made by diverse folks from all over the world!
 
 </div>
 
 <div className='box pink'>
 
-#### electronically delivered!
+#### in your electronic mail!
 
-Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
+music, art, games, apps, doo-dads, photos, gizmos, and more are compiled into a `HYPERTEXT LIST` and delivered to your inbox.
 
 </div>
 
@@ -52,18 +52,22 @@ Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin cof
 
 <div className='box yellow'>
 
-#### 100% pure hypertext!
+#### hand picked by humans!
 
-Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
+every item on the list is selected by a real life human being. no algorithms or so-called “machine learning”.
 
 </div>
 
 <div className='box purple'>
 
-#### browse the archives!
+#### want to share something?
 
-Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art.
+made something neat (or know someone who did)? [drop us a line](mailto:desk@chasem.co). we'll share it and give you credit!
+
+</div>
 
 </div>
 
-</div>
+<br /><br />
+
+`Made with` ♥ `in Chicago by` &nbsp; [`Chase McCoy`]().
