--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,7 +15,7 @@ export default ({ children }) => <div className='container'>{children}</div>
 
 ### An infotainment newsletter for the independent web ☞ <span>Sign up today!</span>
 
-Discovering amazing things that other people have created online used to be easy, but then the web got a lot bigger. Hyperlist is an electronic mail newsletter that narrows down the internet so that you can explore the independent, internet frontier!
+Discovering amazing things that other people have made on the internet used to be easy, but the web's gotten much bigger. Hyperlist is an electronic mail newsletter that wants to make the internet feel a bit smaller. We sift through hyperspace so that you can discover and enjoy more of the weird wide web!
 
 <!-- Lorem ipsum dolor amet crucifix thundercats leggings scenester single-origin coffee chambray stumptown polaroid small batch tumblr street art. Bushwick offal gentrify, wayfarers enamel pin listicle authentic sustainable man bun. Mlkshk cold-pressed man braid, asymmetrical coloring book affogato tbh vinyl bespoke. Beard jean shorts small batch messenger bag live-edge fingerstache aesthetic unicorn.
 
@@ -36,13 +36,19 @@ Discovering amazing things that other people have created online used to be easy
 
 we surf the web to find the most interesting things being made by diverse folks from all over the world!
 
+![](/static/turnpage.gif)
+
 </div>
 
 <div className='box pink'>
 
-#### in your electronic mail!
+#### hand picked by humans!
+
+<!-- every item on the list is selected by a real life human being. no algorithms or so-called “machine learning”. -->
 
 music, art, games, apps, doo-dads, photos, gizmos, and more are compiled into a `HYPERTEXT LIST` and delivered to your inbox.
+
+![](/static/media.gif)
 
 </div>
 
@@ -52,9 +58,13 @@ music, art, games, apps, doo-dads, photos, gizmos, and more are compiled into a 
 
 <div className='box yellow'>
 
-#### hand picked by humans!
+#### in your electronic mail!
 
-every item on the list is selected by a real life human being. no algorithms or so-called “machine learning”.
+<!-- music, art, games, apps, doo-dads, photos, gizmos, and more are compiled into a `HYPERTEXT LIST` and delivered to your inbox. -->
+
+we're keepin' it casual. hyperlist is only delivered when there's enough stuff to share. expect ~2 issues a month.
+
+![](/static/coolmail.gif)
 
 </div>
 
@@ -64,10 +74,12 @@ every item on the list is selected by a real life human being. no algorithms or 
 
 made something neat (or know someone who did)? [drop us a line](mailto:desk@chasem.co). we'll share it and give you credit!
 
+![](/static/mailwrite.gif)
+
 </div>
 
 </div>
 
 <br /><br />
 
-`Made with` ♥ `in Chicago by` &nbsp; [`Chase McCoy`]().
+`Made with` ♥ `in Chicago by` &nbsp; [`Chase McCoy`](//chasem.co) `.` &nbsp; `Gifs from` &nbsp; [`GifCities`](//gifcities.org) `.`
