--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -13,7 +13,7 @@ export default ({ children }) => <div className='container'>{children}</div>
   <img src='/static/logo.svg' width='251' height='71' alt='Hyperlist Online' />
 </header>
 
-### An infotainment newsletter for the independent web ☞ <span>Sign up today!</span>
+### An infotainment newsletter for the independent web ![](/static/stars.gif) <span>Sign up today!</span>
 
 Discovering amazing things that other people have made on the internet used to be easy, but the web's gotten much bigger. Hyperlist is an electronic mail newsletter that wants to make the internet feel a bit smaller. We sift through hyperspace so that you can discover and enjoy more of the weird wide web!
 
@@ -36,13 +36,13 @@ Discovering amazing things that other people have made on the internet used to b
 
 we surf the web to find the most interesting things being made by diverse folks from all over the world!
 
-![](/static/turnpage.gif)
+![](/static/globe.gif)
 
 </div>
 
 <div className='box pink'>
 
-#### hand picked by humans!
+#### delivered straight to you!
 
 <!-- every item on the list is selected by a real life human being. no algorithms or so-called “machine learning”. -->
 
@@ -58,11 +58,11 @@ music, art, games, apps, doo-dads, photos, gizmos, and more are compiled into a 
 
 <div className='box yellow'>
 
-#### in your electronic mail!
+#### we promise not to annoy you!
 
 <!-- music, art, games, apps, doo-dads, photos, gizmos, and more are compiled into a `HYPERTEXT LIST` and delivered to your inbox. -->
 
-we're keepin' it casual. hyperlist is only delivered when there's enough stuff to share. expect ~2 issues a month.
+we're keepin' it casual. hyperlist is only delivered when there's enough stuff to share. expect ~2 issues a month. no spam, ever.
 
 ![](/static/coolmail.gif)
 
